<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/result_screen"
        android:layout_width="425dp"
        android:layout_height="70dp"
        android:background="#03A9F4"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="My App"
        app:titleTextAppearance="@style/Toolbar.TitleItalic"
        app:titleTextColor="@color/white"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/additionBtn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#1976D2"
        android:text="@string/addition"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_screen"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/multiplicationBtn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#1976D2"
        android:text="@string/multiplication"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtractionBtn"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/subtractionBtn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#1976D2"
        android:text="@string/subtraction"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionBtn"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
